--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@react-three/drei": "^9.97.6",
+    "@react-three/fiber": "^8.15.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "framer-motion-3d": "^11.0.5",
     "geist": "^1.2.2",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -20,6 +24,7 @@
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.0",
     "react-simple-typewriter": "^5.0.1",
     "sass": "^1.70.0",
     "tailwind-merge": "^2.2.1",
